# Pdf-TimeTable-Gen

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pdf_timetable_gen/: __init__.py  analyzer.py  cli.py  config.py  constraint.py  extractor.py  parser.py  scheduler.py
pdf_timetable_gen/formats/: __init__.py  docx.py  html.py  ics.py  md.py
tests/: test_parser.py
